--- a/components/jex/jex.html
+++ b/components/jex/jex.html
@@ -1,4 +1,4 @@
-<div class="ui form" style="padding: 60px 30px 0 30px;">
+<div class="ui form bg_color_light" style="margin: 55px 20px 10px 20px; padding: 20px; border-radius: 10px;">
     <div class="ui form">
         <div class="fields columns two">
             <!-- <div class="field">
@@ -44,7 +44,7 @@
 
     </div>
 
-    <div class="fields column two">
+    <div class="fields column two" style="margin: 0;">
         <div class="field custom_hegith">
             <textarea spellcheck="false" rows="50" id="code_pre"></textarea>
             <!--                        <pre id="code_pre" spellcheck="false" contenteditable="true" style="margin: 0"></pre>-->
