--- a/components/subtitle/subtitle.html
+++ b/components/subtitle/subtitle.html
@@ -1,4 +1,4 @@
-<div class="ui container pt_60">
+<div class="ui bg_color_light" style="margin: 55px 20px 10px 20px; padding: 20px; border-radius: 10px;">
     <form class="ui form" onsubmit="return false;">
         <div class="ui input massive" style="margin-bottom: 15px;">
             <div class="ui compact dropdown" id="md_type">
@@ -56,7 +56,7 @@
                         id="btn_plus"></i></label>
                 <textarea id="timer" rows="10" style="resize: none;line-height: 25px;"></textarea>
             </div>
-            <div class="fourteen wide field" style="z-index: 3;">
+            <div class="fifteen wide field" style="z-index: 3;">
                 <label><label data-tooltip="If you want italic use: <i>text...</i> (only .src)" data-inverted="" data-position="top left"><i class="question circle outline icon grey"></i></label>  Lyric</label>
                 <textarea id="lyric" rows="10" style="line-height: 25px;"></textarea>
             </div>
