--- a/components/html_2_js/html_2_js.html
+++ b/components/html_2_js/html_2_js.html
@@ -1,7 +1,7 @@
 <div id="layout2">
     <div id="left_part">
         <div class="body">
-            <h3 class="text_fixed_color">HTML to JavaScript</h3>
+            <h3 class="txt_color">HTML to JavaScript</h3>
             <form class="ui form small">
                 <div class="field">
                     <label class="text_fixed_color">Variable Name</label>
@@ -19,7 +19,7 @@
                     </div>
                 </div>
 
-                <div class="field">
+                <div class="field required">
                     <div style="display: flex; justify-content: space-between;  margin-bottom: 5px">
                         <label class="text_fixed_color">Past HTML here</label> 
                         <div>
