--- a/components/text_compare/text_compare.html
+++ b/components/text_compare/text_compare.html
@@ -1,5 +1,5 @@
 <div class="box">
-    <h3 class="text_fixed_color">Text Compare</h3>
+    <h3 class="txt_color">Text Compare</h3>
     <div class="setting_me">
         <div>
             <div class="ui form mini">
