--- a/components/pattern/pattern.html
+++ b/components/pattern/pattern.html
@@ -12,7 +12,7 @@
                     <div class="field required">
                         <div style="display: flex;">
                             <label class="text_fixed_color">Pattern</label>
-                            <div class="show_my_popup" data-offset="-2" data-position="top left" data-html="<spand class='txt_main_color'>$key: </spand>replace with Key.<br><spand class='txt_main_color'>$tab: </spand>replace with tab." style="margin-left: 5px;"><i class="question circle icon"></i></div> 
+                            <div class="show_my_popup" data-offset="-2" data-position="top left" data-html="<spand class='txt_main_color'>$key: </spand>replace with Key.<br><spand class='txt_main_color'>$key[number]: </spand>replace with specifice key index.<br><spand class='txt_main_color'>$val: </spand>replace with valaue.<br><spand class='txt_main_color'>$val[number]: </spand>replace with specific valaue index.<br><spand class='txt_main_color'>$tab: </spand>replace with tab." style="margin-left: 5px;"><i class="question circle icon"></i></div> 
                         </div>
                         <div style="margin-bottom:10px;" class="two fields">
                             <div class="field">
