--- a/css/theme-dark2.css
+++ b/css/theme-dark2.css
@@ -133,3 +133,10 @@
     color: orange;
 }
 
+.dark2 .mini_setting {
+    background: var(--light-black) !important;
+}
+
+.dark2 .mini_setting .item{
+    color: orange !important;
+}
